[package]
name = "fassoc-proxy"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
version = "1.0.144"
features = [
    "derive"
]

[dependencies]
serde_json = "1.0.83"
regex = "1.6.0"
chrono = "0.4.22"
log = "0.4.17"

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging"
]
